# MAA-Manager

./: .env  .flaskenv  .gitignore  MAA-Manager.py  README.md  pyproject.toml  server.py
config/: config.schema.json
