[tool.poetry]
package-mode = false
name = "MAA-Manager"
version = "0.1.0"
description = ""
authors = ["Nemowang <211108100@smail.nju.edu.cn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
